# cob

./: .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
_test_projects/basics/: .cob-project.yml  config.py
_test_projects/ember/: .cob-project.yml
_test_projects/ember_non_root_uri/: .cob-project.yml  main.py
_test_projects/services/: index.py  (+1 more)
cob/: Dockerfile.j2  __init__.py  app.py  app_utils.py  bootstrapping.py  celery_utils.py  ctx.py  db.py  defs.py  exceptions.py  locations.py  project.py  pytest_plugin.py  service_manager.py
doc/: api.rst  background_tasks.rst  basic_grains.rst  changelog.rst  commands.rst  conf.py  configuration.rst  database.rst  deployment.rst  developing.rst  environment.rst  frontend.rst  getting_started.rst  hooks.rst  index.rst  introduction.rst  migrations.rst  pip_requirements.txt  services.rst  static_files.rst  tasks.rst  testing.rst  tutorial.rst
scripts/: prebuild_images.py  run_parallel_pytest_slice.py
tests/: conftest.py  project.py  test_basics.py  test_blueprints.py  test_bundles.py  test_config.py  test_conflicts.py  test_deps.py  test_ember_apps.py  test_front_matter_parser.py  test_merge_config.py  test_models.py  test_mountpoints.py  test_path_sorting.py  test_project_api.py  test_secret_config.py  test_services.py  test_simple_projects.py  test_startup_file.py  test_static_files.py  test_tasks.py  test_templates.py  test_unittests.py  utils.py
weber/: app.py  bootstrapping.py  defs.py  project.py  subsystems.py
(+142 files in other folders)
