[metadata]
name = cob
author = Rotem Yaari
author-email = vmalloc@gmail.com
description = Cob is a powerful framework for building full-stack web applications
home-page = https://cob.readthedocs.org
license = BSD3
zip_safe = False
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    cob

data_files =
    cob/templates = cob/templates/*
    cob/_skeletons = cob/_skeletons/*

[entry_points]
console_scripts =
    cob = cob.cli.main:main
pytest11 =
    cob = cob.pytest_plugin
